--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -15,7 +15,15 @@
   color: g.$primary-text-color;
   overflow-y: scroll;
   z-index: 1000;
-  transition: all 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+
+  @media (max-width: 1079px) {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    transform: translateX(0);
+  }
 
   @media (max-width: 768px) {
     width: 240px;
@@ -41,9 +49,23 @@
   color: g.$primary-text-color;
   overflow-y: scroll;
   z-index: 1000;
-  transition: all 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+
+  @media (max-width: 1079px) {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 280px;
+    min-width: 240px;
+    max-width: 280px;
+    transform: translateX(-100%);
+  }
 
   @media (max-width: 768px) {
+    width: 240px;
+    min-width: 240px;
+    max-width: 240px;
     height: calc(100vh - 80px);
   }
 
